# LLM-Powered-PDF-Extractor

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
backend/: .env.example  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: __init__.py  batch.py  (+3 more)
backend/app/core/: __init__.py  config.py  exceptions.py  logger.py
backend/app/schemas/: __init__.py  ats.py  base.py  candidate.py  extraction.py  invoice.py  resume.py
backend/app/services/ats/: __init__.py  scorer.py
backend/app/services/candidate/: __init__.py  analyzer.py  ranker.py
backend/app/services/extraction/: __init__.py  orchestrator.py  post_processor.py  validator.py
backend/app/services/llm/: __init__.py  client.py  ollama_client.py  parser.py  prompts.py
backend/app/services/pdf/: __init__.py  detector.py  extractor.py  processor.py
backend/app/utils/: file_handler.py
backend/scripts/: generate_test_pdfs.py  test_api_response.py  test_detection.py  test_extraction.py  test_llm.py  test_multipage.py  test_orchestrator.py  test_processing.py  verify_phase7.py  verify_phase8.py  verify_phase9.py
backend/tests/: test_placeholder.py
docs/: API.md  SETUP.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: .gitkeep  BatchResultsPanel.tsx  ConfidenceIndicator.tsx  ErrorBoundary.tsx  Header.tsx  JsonViewer.tsx  MultiUploadZone.tsx  ProgressBar.tsx  RankingResultsPanel.tsx  ResultsPanel.tsx  ResumeAnalyzer.tsx  UploadZone.tsx
frontend/src/services/: .gitkeep  api.ts
frontend/src/types/: index.ts
samples/: .gitkeep  generate_samples.py
