[tool.poetry]
name = "pdf-intelligence-extractor"
version = "0.1.0"
description = "LLM-Powered PDF Intelligence Extraction System - Optimized for CPU-only environments"
authors = ["Developer"]
readme = "README.md"
packages = [{include = "app", from = "backend"}]

[tool.poetry.dependencies]
python = "^3.10"
# FastAPI & Web
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
# PDF Processing
pdfplumber = "^0.10.3"
# Data Validation
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
# LLM Client
httpx = "^0.26.0"
# Logging & CLI
rich = "^13.7.0"
# Environment
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.3"
# Code Quality
black = "^24.1.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
# Pre-commit
pre-commit = "^3.6.0"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]
skip = [".venv", "venv"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
